cmake_minimum_required(VERSION 3.16)
project("Sample SDL project")
include_directories("/usr/include/SDL2")
include_directories("include/")
add_executable(main sdltest.c Map.c Menu.c Potions.c Game_Functions.c Users.c Maingame.c)
target_link_libraries(main m SDL2 SDL2_gfx SDL2_ttf SDL2_image)
